login text alignment fixed

--- a/src/app/form/login/login.component.css
+++ b/src/app/form/login/login.component.css
@@ -197,12 +197,14 @@ svg {
     background-color: #228be6;
     color: #fff;
     margin-top: 10px;
-    padding: 0.5% 0 0 11%;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin-bottom: 5%;
     transition: background-color 0.3s ease;
+
+    justify-content: center;
+    align-items: center;
 
     position: absolute;
     left: 124px;
